DZVIN-6194 Fixed collapse title and fixed styles right sidebar

--- a/src/components/common/TabsPanel/style.less
+++ b/src/components/common/TabsPanel/style.less
@@ -3,7 +3,7 @@
 
 .tabs-panel {
   .flex;
-  flex: 1 1 auto;
+  width: 100%;
   flex-direction: row;
 }
 .tabs-panel-headers{
@@ -49,9 +49,11 @@
 .tabs-panel-content{
   min-height: 10%;
   flex: 1 1 auto;
+  overflow: hidden;
   .flex;
 }
 .tabs-panel-container{
-  flex: 1 1 auto;
   .flex;
+  flex: 1 1 auto;
+  overflow: hidden;
 }
